# Parallel-coursework

./: CMakeLists.txt  README.md
src/: main.cpp
src/assignment1/: CMakeLists.txt  README.md
src/assignment1/input/: input2.txt
src/assignment1/output/: output2.txt  output2_basic_parallel.txt  output_test_matrix.txt
src/assignment1/src/: main.cpp  parallel_basic.cpp  sequential.cpp  sequentialEigen.cpp
src/tests/: CMakeLists.txt
src/tests/src/: test1.cpp
